--- a/demo/_meta/config
+++ b/demo/_meta/config
@@ -1,14 +1,15 @@
 #!/bin/bash
 
-#
+# meta/config
 
-# Usage
+# Generate config.json adding defaults to config.yaml
 
-CONFIG=$1
+# Usage: config config.yaml > config.json
 
-yaml2json $CONFIG       \
-| jq --sort-keys		\
-     --from-file ${0}.jq
+CONFIG=${1?Expected config.yaml}
+
+yaml2json $CONFIG \
+| jq --sort-keys --from-file ${0}.jq
 
 exit
 
